06-docker-k8s/05-simple-k8s/other/ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"letsencrypt-prod","kubernetes.io/ingress.class":"nginx","nginx.ingress.kubernetes.io/proxy-body-size":"100m","nginx.ingress.kubernetes.io/server-snippet":"set $agentflag 0;\nif ($host ~ ^(?:(?\u003cname\u003e\\w+)\\.)?foodstufff\\.co\\.uk) { set $agentflag 1; }\nif ( $agentflag = 1 ) { if ( $name ~ ^$) { return 301 https://wearefoodstuff.co.uk$request_uri; } return 301 https://$ [...]
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/eventsource: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "84600"
    nginx.ingress.kubernetes.io/server-snippet:
      "set $agentflag 0;\n\nif ($host ~
      ^(?<name>.+)\\.foodstufff\\.co\\.uk) { \n  set $agentflag 1;\n}\n\nif ( $agentflag
      = 1 ) { \n  return 301 https://$name.wearefoodstuff.co.uk$request_uri;\n}\n"
  creationTimestamp: "2020-08-20T19:09:34Z"
  generation: 18
  name: ingress-dev
  namespace: default
  resourceVersion: "516104502"
  uid: 081d14c4-1912-4628-8d32-8ef35e7f45d2
spec:
  rules:
    - host: dev.wearefoodstuff.co.uk
      http:
        paths:
          - backend:
              service:
                name: foodstufff-dev-service
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
    - host: admin-dev.wearefoodstuff.co.uk
      http:
        paths:
          - backend:
              service:
                name: foodstufff-admin-service
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
    - host: api-dev.wearefoodstuff.co.uk
      http:
        paths:
          - backend:
              service:
                name: foodstufff-api-service
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
    - host: stage.wearefoodstuff.co.uk
      http:
        paths:
          - backend:
              service:
                name: foodstufff-stage-service
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
    - host: admin-stage.wearefoodstuff.co.uk
      http:
        paths:
          - backend:
              service:
                name: foodstufff-admin-stage-service
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
    - host: api-stage.wearefoodstuff.co.uk
      http:
        paths:
          - backend:
              service:
                name: foodstufff-api-stage-service
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - dev.wearefoodstuff.co.uk
        - admin-dev.wearefoodstuff.co.uk
        - api-dev.wearefoodstuff.co.uk
        - stage.wearefoodstuff.co.uk
        - admin-stage.wearefoodstuff.co.uk
        - api-stage.wearefoodstuff.co.uk
      secretName: temp-landing-redirect
status:
  loadBalancer:
    ingress:
      - ip: 34.76.208.1
      - ip: 35.233.64.96
      - ip: 35.241.194.14
